--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>microservices.app</groupId>
+            <artifactId>clients</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
